--- a/clusters/local/cnpg.yaml
+++ b/clusters/local/cnpg.yaml
@@ -9,6 +9,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: "./infrastructure/cnpg"
+  path: "./clusters/cnpg"
   prune: true
   timeout: 1m0s
