--- a/clusters/local/coursework.yaml
+++ b/clusters/local/coursework.yaml
@@ -9,6 +9,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: "./clusters/apps/coursework"
+  path: "./clusters/coursework"
   prune: true
   timeout: 1m0s
