--- a/clusters/local/coursework.yaml
+++ b/clusters/local/coursework.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.config.k8s.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: coursework
