create cluster postgres

--- a/apps/coursework/postgres.yaml
+++ b/apps/coursework/postgres.yaml
@@ -1,4 +1,4 @@
-apiVersion: postgresql.cnpg.kustomize.config.k8s.io/v1
+apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: coursework-db
