--- a/charts/coursework/values.yaml
+++ b/charts/coursework/values.yaml
@@ -21,7 +21,7 @@ nameOverride: coursework-rdlsolutions/coursework-rd
 fullnameOverride: ""
 
 environment:
-  DB_HOST: "postgres_db" 
+  DB_HOST: "postgres-db-rw" 
   DB_PORT: 5432
   DB_USER: myuser
   DB_PASSWORD: mysecretpassword
