--- a/charts/coursework/templates/ingress.yaml
+++ b/charts/coursework/templates/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Values.ingress.name }}
+  namespace: {{ .Values.namespace }}
 spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
