--- a/charts/coursework/values.yaml
+++ b/charts/coursework/values.yaml
@@ -1,7 +1,7 @@
 # Default values for coursework.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-namespace: coursework-ns
+namespace: coursework
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 
