--- a/apps/coursework/postgres.yaml
+++ b/apps/coursework/postgres.yaml
@@ -2,6 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: coursework-db
+  namespace: coursework
 spec:
   instances: 3 
   storage:
