--- a/clusters/local/helm-app.yaml
+++ b/clusters/local/helm-app.yaml
@@ -12,6 +12,6 @@ spec:
       version: 0.1.0
       sourceRef:
         kind: GitRepository
-        name: coursework-rd
+        name: flux-system
       interval: 5m
   releaseName: coursework
