--- a/clusters/local/helm-app.yaml
+++ b/clusters/local/helm-app.yaml
@@ -13,5 +13,6 @@ spec:
       sourceRef:
         kind: GitRepository
         name: flux-system
+        namespace: flux-system
       interval: 5m
   releaseName: coursework
