--- a/charts/coursework/values.yaml
+++ b/charts/coursework/values.yaml
@@ -17,7 +17,7 @@ containerPorts: 8080
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 # This is to override the chart name.
-nameOverride: coursework-rdlsolutions/coursework-rd
+nameOverride: coursework-rd
 fullnameOverride: ""
 
 environment:
