--- a/clusters/local/helm-app.yaml
+++ b/clusters/local/helm-app.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: coursework-chart
-  namespace: coursework-ns
+  namespace: coursework
 spec:
   interval: 15m
   timeout: 5m
