--- a/charts/coursework/values.yaml
+++ b/charts/coursework/values.yaml
@@ -9,7 +9,7 @@ image:
 
 containerPorts: 8080
 nameOverride: coursework-rd
-fullnameOverride: ""
+fullnameOverride: "coursework-rd-deployment"
 
 environment:
   DB_HOST: "postgres-db-rw" 
