add metadata in deployment

--- a/charts/coursework/templates/deployment.yaml
+++ b/charts/coursework/templates/deployment.yaml
@@ -8,6 +8,9 @@ spec:
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   template:
+    metadata:
+      labels:
+        app: {{ .Values.nameOverride }}
     spec:
       containers:
         - name: {{ .Values.nameOverride }}
