--- a/charts/coursework/templates/deployment.yaml
+++ b/charts/coursework/templates/deployment.yaml
@@ -7,6 +7,9 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  selector:
+    matchLabels:
+      app: {{ .Values.nameOverride }}
   template:
     metadata:
       labels:
