add target namespace

--- a/clusters/local/helm-app.yaml
+++ b/clusters/local/helm-app.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   interval: 15m
   timeout: 5m
+  targetNamespace: coursework
+  install:
+    createNamespace: true
   chart:
     spec:
       chart: ./charts/coursework
