--- a/apps/coursework/kustomization.yaml
+++ b/apps/coursework/kustomization.yaml
@@ -7,6 +7,8 @@ configMapGenerator:
   - name: coursework-config
     literals:
       - DB_TYPE=postgresdb
-      - DB_POSTGRESDB_HOST=postgres-db-rw
-      - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=mydatabase
+      - DB_HOST=postgres-db-rw
+      - DB_PORT=5432
+      - DB_NAME=mydatabase
+      - DB_USER=myuser
+
