--- a/apps/coursework/postgres.yaml
+++ b/apps/coursework/postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: coursework-db
-  namespace: coursework
+  namespace: flux-system
 spec:
   instances: 3 
   storage:
