--- a/clusters/local/helm-app.yaml
+++ b/clusters/local/helm-app.yaml
@@ -4,6 +4,9 @@ metadata:
   name: coursework-chart
   namespace: coursework
 spec:
+  dependsOn:
+    - name: coursework
+    - name: coursework-db 
   interval: 15m
   timeout: 5m
   targetNamespace: coursework
