--- a/apps/coursework/helm-app.yaml
+++ b/apps/coursework/helm-app.yaml
@@ -4,6 +4,9 @@ metadata:
   name: coursework-chart
   namespace: coursework-ns
 spec:
+  dependsOn:
+    - name: flux-system
+      namespace: flux-system
   interval: 15m
   timeout: 5m
   targetNamespace: coursework-ns
