--- a/apps/coursework/postgres.yaml
+++ b/apps/coursework/postgres.yaml
@@ -7,3 +7,10 @@ spec:
   instances: 3 
   storage:
     size: 1Gi
+  bootstrap:
+    initdb: # Развертывание нового кластера.
+      database: mydatabase
+      owner: myuser
+      passwordSecret:
+        name: coursework-db-secret
+        key: password
