--- a/charts/coursework/templates/secrets.yaml
+++ b/charts/coursework/templates/secrets.yaml
@@ -3,6 +3,6 @@ kind: Secret # Secret с доступами к БД.
 metadata:
   name: coursework-db-secret
 data:
-  username: {{ .Values.DB_USER| b64enc }}
-  password: {{ .Values.DB_PASS| b64enc }}
+  username: {{ .Values.environment.DB_USER| b64enc }}
+  password: {{ .Values.environment.DB_PASSWORD| b64enc }}
 type: kubernetes.io/basic-auth
