--- a/charts/coursework/values.yaml
+++ b/charts/coursework/values.yaml
@@ -12,11 +12,11 @@ nameOverride: coursework-rd
 fullnameOverride: "coursework-rd-deployment"
 
 environment:
-  DB_HOST: "coursework-db-rw" 
+  DB_HOST: coursework-db-rw
   DB_PORT: 5432
   DB_USER: app
   DB_PASSWORD: XgDBTEwQD6Hc74hZV6B3HN9zeN7vg1yQteCaWwBxrBsia4zYUoPQZTKli7YzYAfi
-  DB_NAME: mydatabase
+  DB_NAME: app
 
 
 securityContext: {}
