--- a/charts/coursework/templates/deployment.yaml
+++ b/charts/coursework/templates/deployment.yaml
@@ -25,6 +25,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
+          dependsOn:
+            - coursework-ns  
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
