--- a/apps/coursework/postgres.yaml
+++ b/apps/coursework/postgres.yaml
@@ -7,3 +7,32 @@ spec:
   instances: 3 
   storage:
     size: 1Gi
+
+  bootstrap:
+    initdb:
+      database: app
+      owner: app
+      secret:
+        name: coursework-db-app
+
+  enableSuperuserAccess: true
+  superuserSecret:
+    name: coursework-db-superuser
+---
+apiVersion: v1
+data:
+  username: YXBw
+  password: ZFROZE5aVVJrNlFCSzdOWGtTOWJvbWZFOHRoYmprV2VoTFluRVh3YVJITldxUlNBZjBvNTM1OGJQaXV5cTFaRA==
+kind: Secret
+metadata:
+  name: coursework-db-app
+type: kubernetes.io/basic-auth
+---
+apiVersion: v1
+data:
+  username: cG9zdGdyZXM=
+  password: ZFROZE5aVVJrNlFCSzdOWGtTOWJvbWZFOHRoYmprV2VoTFluRVh3YVJITldxUlNBZjBvNTM1OGJQaXV5cTFaRA==
+kind: Secret
+metadata:
+  name: coursework-db-superuser
+type: kubernetes.io/basic-auth
