--- a/apps/coursework/kustomization.yaml
+++ b/apps/coursework/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - namespace.yaml
   - postgres.yaml
 configMapGenerator:
   - name: coursework-config
     literals:
-      - DB_TYPE=postgresdb
-      - DB_HOST=postgres-db-rw
+      - DB_HOST=coursework-db-rw.coursework-ns.svc.cluster.local
       - DB_PORT=5432
-      - DB_NAME=mydatabase
-      - DB_USER=myuser
+      - DB_NAME=app
+      - DB_USER=app
 
