--- a/apps/base/helm-app.yaml
+++ b/apps/base/helm-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: coursework-chart
+  name: coursework
   namespace: coursework-ns
 spec:
   interval: 15m
