add depencity kustomization

--- a/clusters/local/cnpg.yaml
+++ b/clusters/local/cnpg.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cnpg-operator
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: name-ns
   interval: 10m0s
   targetNamespace: coursework-ns
   sourceRef:
