--- a/clusters/local/namespace.yaml
+++ b/clusters/local/namespace.yaml
@@ -1,16 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: coursework
+  name: name-ns
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: dbpg-operator
-  interval: 10m0s
-  targetNamespace: coursework-ns
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: "./infrastructure/charts"
+  interval: 10m0s
+  path: "./infrastructure/cnpg"
   prune: true
   timeout: 1m0s
