--- a/infrastructure/base/kustomization.yaml
+++ b/infrastructure/base/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: postgres-db
 resources:
-  - namespace.yaml
-  - postgres.yaml
-  - helm-app.yaml
+  - ../apps/base/postgres.yaml
 configMapGenerator:
   - name: coursework-config
     literals:
