--- a/clusters/apps/base/appcharts/helm-app.yaml
+++ b/clusters/apps/base/appcharts/helm-app.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: ./charts/coursework
+      chart: ./charts/coursework/values.yaml
       version: 0.1.0
       sourceRef:
         kind: GitRepository
