--- a/clusters/local/cnpg.yaml
+++ b/clusters/local/cnpg.yaml
@@ -8,6 +8,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: "./infrastructure/cnpg"
+  path: "./apps/operatorpg"
   prune: true
   timeout: 1m0s
