--- a/clusters/local/namespace.yaml
+++ b/clusters/local/namespace.yaml
@@ -8,6 +8,6 @@ spec:
     kind: GitRepository
     name: flux-system
   interval: 10m0s
-  path: "./apps/base/namespaces"
+  path: "../apps/base/namespace"
   prune: true
   timeout: 1m0s
