--- a/clusters/apps/overlays/production/HPA.yaml
+++ b/clusters/apps/overlays/production/HPA.yaml
@@ -3,7 +3,7 @@
   metadata:
     labels:
       environment: production
-    name: course-app-hpa
+    name: coursework-hpa
     namespace: production
   spec:
     maxReplicas: 10
@@ -24,4 +24,4 @@
     scaleTargetRef:
       apiVersion: apps/v1
       kind: Deployment
-      name: course-app
+      name: coursework-rd-deployment
