--- a/clusters/apps/overlays/production/kustomization.yaml
+++ b/clusters/apps/overlays/production/kustomization.yaml
@@ -1,50 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../apps/base/
-  - HPA.yaml  
-patches:
-
-  - target:
-      kind: Service   
-    patch: |
-        - op: replace
-          path: /metadata/namespace
-          value: production
-          
-        - op: replace
-          path: /metadata/labels/app
-          value: course-app-production
-  - target:
-      kind: Ingress   
-    patch: |
-        - op: replace
-          path: /metadata/namespace
-          value: production
-
-  - target:
-      kind: Namespace   
-    patch: |
-        - op: replace
-          path: /metadata/name
-          value: production
-
-  - target:
-      kind: Deployment 
-    patch: |
-
-        - op: replace
-          path: /spec/template/spec/containers/0/env/0/value
-          value: "coursework-db-rw.production.svc.cluster.local:6379/0"
-
-        - op: replace
-          path: /spec/replicas
-          value: 3
-
-        - op: replace
-          path: /metadata/namespace 
-          value:  production
-
-        - op: replace
-          path: /metadata/name
-          value: coursework-rd-production
+  - namespace.yaml
+  - postgres.yaml
+  - prodaction-app.yaml
+    - HPA.yaml  
