--- a/charts/prodaction/values.yaml
+++ b/charts/prodaction/values.yaml
@@ -12,7 +12,7 @@ nameOverride: coursework-rd
 fullnameOverride: "coursework-rd-deployment"
 
 environment:
-  DB_HOST: coursework-db-rw.coursework-ns.svc.cluster.local
+  DB_HOST: coursework-db-rw.prodaction.svc.cluster.local
   DB_PORT: 5432
   DB_USER: app
   DB_PASSWORD: dTNdNZURk6QBK7NXkS9bomfE8thbjkWehLYnEXwaRHNWqRSAf0o5358bPiuyq1ZD
