--- a/charts/prodaction/values.yaml
+++ b/charts/prodaction/values.yaml
@@ -1,4 +1,4 @@
-namespace: prodaction
+namespace: production
 
 replicaCount: 1
 
@@ -12,7 +12,7 @@ nameOverride: coursework-rd
 fullnameOverride: "coursework-rd-deployment"
 
 environment:
-#  DB_HOST: coursework-db-rw.prodaction.svc.cluster.local
+#  DB_HOST: coursework-db-rw.production.svc.cluster.local
   DB_HOST: cnpg-webhook-service
 #  DB_PORT: 5432
   DB_PORT: 443
