--- a/clusters/apps/overlays/production/postgres.yaml
+++ b/clusters/apps/overlays/production/postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: coursework-db
-  namespace: prodaction
+  namespace: production
 spec:
   instances: 3 
   storage:
