--- a/clusters/apps/overlays/production/prodaction-app.yaml
+++ b/clusters/apps/overlays/production/prodaction-app.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: coursework
-  namespace: proodaction
+  namespace: production
 spec:
   interval: 15m
   chart:
