--- a/clusters/local/kustomization-prodaction.yaml
+++ b/clusters/local/kustomization-prodaction.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  targetNamespace: prodaction
+  targetNamespace: production
   sourceRef:
     kind: GitRepository
     name: flux-system
