--- a/clusters/apps/overlays/production/prodaction-app.yaml
+++ b/clusters/apps/overlays/production/prodaction-app.yaml
@@ -7,11 +7,11 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: ./charts/prodaction
+      chart: ./charts/prodution
       version: 0.1.0
       sourceRef:
         kind: GitRepository
         name: flux-system
         namespace: flux-system
       interval: 10m
-  releaseName: coursework-prodaction
+  releaseName: coursework-production
