--- a/clusters/apps/overlays/production/prodaction-app.yaml
+++ b/clusters/apps/overlays/production/prodaction-app.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: ./charts/prodution
+      chart: ./charts/production
       version: 0.1.0
       sourceRef:
         kind: GitRepository
