--- a/clusters/apps/overlays/staging/postgres.yaml
+++ b/clusters/apps/overlays/staging/postgres.yaml
@@ -9,7 +9,7 @@ spec:
     size: 1Gi
   dependsOn:
     - name: cnpg-operator
-      namespace: flux-system
+    - namespace: staging
   bootstrap:
     initdb:
       database: app
