--- a/clusters/apps/overlays/staging/postgres.yaml
+++ b/clusters/apps/overlays/staging/postgres.yaml
@@ -8,7 +8,7 @@ spec:
   storage:
     size: 1Gi
   dependsOn:
-    - name: cnpg-operator
+    - name: cnpg
     - namespace: staging
   bootstrap:
     initdb:
