--- a/clusters/apps/overlays/staging/postgres.yaml
+++ b/clusters/apps/overlays/staging/postgres.yaml
@@ -9,7 +9,8 @@ spec:
     size: 1Gi
   dependsOn:
     - name: cnpg
-    - namespace: staging
+      namespace: flux-system
+    - name: staging
   bootstrap:
     initdb:
       database: app
