--- a/clusters/local/staging.yaml
+++ b/clusters/local/staging.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   interval: 10m0s
   targetNamespace: staging
+  dependencies:
+    - name: cnpg
   sourceRef:
     kind: GitRepository
     name: flux-system
