--- a/charts/production/values.yaml
+++ b/charts/production/values.yaml
@@ -13,7 +13,7 @@ fullnameOverride: "coursework-rd-deployment"
 
 environment:
 #  DB_HOST: coursework-db-rw.production.svc.cluster.local
-  DB_HOST: cnpg-webhook-service
+  DB_HOST: cloudnative-pg
 #  DB_PORT: 5432
   DB_PORT: 443
   DB_USER: app
