--- a/charts/production/values.yaml
+++ b/charts/production/values.yaml
@@ -12,10 +12,8 @@ nameOverride: coursework-rd
 fullnameOverride: "coursework-rd-deployment"
 
 environment:
-#  DB_HOST: coursework-db-rw.production.svc.cluster.local
-  DB_HOST: cloudnative-pg
-#  DB_PORT: 5432
-  DB_PORT: 443
+  DB_HOST: coursework-db-rw.production.svc.cluster.local
+  DB_PORT: 5432
   DB_USER: app
   DB_PASSWORD: dTNdNZURk6QBK7NXkS9bomfE8thbjkWehLYnEXwaRHNWqRSAf0o5358bPiuyq1ZD
   DB_NAME: app
